--- a/DuelystPatchNotes.csproj
+++ b/DuelystPatchNotes.csproj
@@ -8,12 +8,33 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Components\CardView.razor.css" />
+    <None Remove="Pages\Cards.razor.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Components\CardView.razor.css" />
+    <Content Include="Pages\Cards.razor.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.2" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\PatchData\0.2.23.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\Assets\Gifs\Loading\" />
+    <Folder Include="wwwroot\Assets\Images\Backgrounds\" />
   </ItemGroup>
 
 </Project>
